--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     implementation 'com.squareup.okhttp3:logging-interceptor:3.4.2'
     // RxJava 2
     implementation "io.reactivex.rxjava2:rxjava:2.1.5"
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
     // ButterKnife
     implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
