[#1] 차트 테스트

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,4 +46,6 @@ dependencies {
     // ButterKnife
     implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+    // MP Chart
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
 }
