--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,4 +59,6 @@ dependencies {
     implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
     // Timber
     implementation 'com.jakewharton.timber:timber:4.6.0'
+    // Picasso
+    implementation 'com.squareup.picasso:picasso:2.5.2'
 }
